--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,8 +33,12 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
+      # publish to a branch in current repo using GITHUB_TOKEN and other default settings
+      - uses: oleksiyrudenko/gha-git-credentials@v1
+        with:
+          token: '${{ secrets.GITHUB_TOKEN }}'
+      - run: npm version patch
+
       - name: Build
-        run: |
-          npm version patch
-          npm run prod
+        run: npm run prod
 
