--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "test",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
+    "ng": "node --max_old_space_size=8192 ./node_modules/@angular/cli/bin/ng",
     "start": "ng serve",
     "build": "ng build",
-    "prod": "ng build --prod",
+    "prod": "npm run ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
