--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,7 +41,9 @@ jobs:
       - uses: oleksiyrudenko/gha-git-credentials@v1
         with:
           token: '${{ secrets.GITHUB_TOKEN }}'
-      - run: npm version patch
+
+      - name: Version
+        run: npm version patch
 
       - name: Build
         run: npm run prod
