--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,10 +49,9 @@ jobs:
       - name: Build
         run: |
           npm run prod
-          cd dist/test
 
       - uses: actions/upload-artifact@v2
         with:
           name: release
-          path: .
+          path: dist/test
 
