--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,9 +49,27 @@ jobs:
       - name: Build
         run: |
           npm run prod
+          cd dist/test
+          zip -r release.zip .
 
-      - uses: actions/upload-artifact@v2
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          name: release
-          path: dist/test
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: false
+          prerelease: false
+          
+      - name: Upload Release Asset
+        id: upload-release-asset 
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./dist/test/release.zip
+          asset_name: release.zip
 
