--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,4 +72,5 @@ jobs:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./dist/test/release.zip
           asset_name: release.zip
+          asset_content_type: application/zip
 
