--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,6 +45,10 @@ jobs:
         run: |
           npm version patch
           git push origin release --follow-tags
+          
+      - name: Current NPM Package Version
+        id: version
+        uses: justincy/npm-version-action@2.1.0
 
       - name: Build
         run: |
@@ -58,8 +62,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          tag_name: ${{ steps.version.outputs.version }}
+          release_name: Release ${{ steps.version.outputs.version }}
           draft: false
           prerelease: false
           
@@ -71,6 +75,6 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./dist/test/release.zip
-          asset_name: release.zip
+          asset_name: ${{ steps.version.outputs.version }}.zip
           asset_content_type: application/zip
 
