--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,7 +48,7 @@ jobs:
           
       - name: Current NPM Package Version
         id: version
-        uses: action-get-npm-version@master
+        uses: pchynoweth/action-get-npm-version@master
 
       - name: Build
         run: |
