--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,6 +40,7 @@ jobs:
         uses: oleksiyrudenko/gha-git-credentials@v1
         with:
           token: '${{ secrets.GITHUB_TOKEN }}'
+          actor: '${{ GITHUB_ACTOR }}'
           name: 'GitHub Actions'
       - run: |
           npm version patch
