--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,8 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0 
       - uses: actions/setup-node@v1
         with:
           node-version: 10
@@ -55,6 +57,10 @@ jobs:
       - name: Get current version
         id: version
         uses: pchynoweth/action-get-npm-version@master
+        
+      - name: Extract Repo Attributes
+        id: attrs
+        uses: ibnesayeed/repo-attrs@master
 
       - name: Create Release
         id: create_release
@@ -66,6 +72,28 @@ jobs:
           release_name: Release v${{ steps.version.outputs.version }}
           draft: false
           prerelease: false
+          body: |
+            ## Changes in this Release
+
+            History from `${{ steps.attrs.outputs.tail }}` to `${{ steps.attrs.outputs.head }}`
+
+            ### Commits
+
+            ${{ steps.attrs.outputs.commits }}
+
+            ### Pull Requests
+
+            ${{ steps.attrs.outputs.prs }}
+
+            ### Contributors
+
+            ${{ steps.attrs.outputs.contributors }}
+
+            ### Files
+
+            ```
+            ${{ steps.attrs.outputs.files }}
+            ```
           
       - name: Upload Release Asset
         id: upload-release-asset 
@@ -75,6 +103,6 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./dist/test/release.zip
-          asset_name: ${{ steps.version.outputs.version }}.zip
+          asset_name: ${{ github.repository }}.zip
           asset_content_type: application/zip
 
