--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,52 +57,45 @@ jobs:
       - name: Get current version
         id: version
         uses: pchynoweth/action-get-npm-version@master
+      
+      - name: Get new tag
+        run: |
+          NEW_TAG=v${{ steps.version.outputs.version }}
+          echo "::set-env name=newTag::$NEW_TAG"
         
-      - name: Extract Repo Attributes
-        id: attrs
-        uses: ibnesayeed/repo-attrs@master
-
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: v${{ steps.version.outputs.version }}
-          release_name: Release v${{ steps.version.outputs.version }}
-          draft: false
-          prerelease: false
-          body: |
-            ## Changes in this Release
-
-            History from `${{ steps.attrs.outputs.tail }}` to `${{ steps.attrs.outputs.head }}`
-
-            ### Commits
-
-            ${{ steps.attrs.outputs.commits }}
-
-            ### Pull Requests
-
-            ${{ steps.attrs.outputs.prs }}
-
-            ### Contributors
-
-            ${{ steps.attrs.outputs.contributors }}
-
-            ### Files
-
-            ```
-            ${{ steps.attrs.outputs.files }}
-            ```
+      - name: Get Previous Tag
+        run: |
+          PREV_TAG=$(git describe --abbrev=0 --tags "v${{ env.newTag }}^")
+          echo "::set-env name=baseRef::$PREV_TAG"
           
-      - name: Upload Release Asset
-        id: upload-release-asset 
-        uses: actions/upload-release-asset@v1
+      - name: Generate changelog
+        id: generate_changelog
+        uses: nblagoev/pull-release-notes-action@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/test/release.zip
-          asset_name: ${{ github.repository }}.zip
-          asset_content_type: application/zip
+          base-ref: ${{ env.baseRef }}
+          head-ref: ${{ env.newTag }}
+
+#       - name: Create Release
+#         id: create_release
+#         uses: actions/create-release@v1
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#         with:
+#           tag_name: v${{ steps.version.outputs.version }}
+#           release_name: Release v${{ steps.version.outputs.version }}
+#           draft: false
+#           prerelease: false
+          
+#       - name: Upload Release Asset
+#         id: upload-release-asset 
+#         uses: actions/upload-release-asset@v1
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#         with:
+#           upload_url: ${{ steps.create_release.outputs.upload_url }}
+#           asset_path: ./dist/test/release.zip
+#           asset_name: ${{ github.repository }}.zip
+#           asset_content_type: application/zip
 
