--- a/.github/workflows/build-release-artifact.yml
+++ b/.github/workflows/build-release-artifact.yml
@@ -3,43 +3,14 @@ on:
     tags:
       - 'v*'
 
-name: Create release
+name: Build release artifact
 
 jobs:
   release:
-    name: Create Release
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-
-      - name: Get previous tag
-        run: |
-          PREV_TAG=$(git describe --abbrev=0 --tags "${{ github.ref }}^")
-          echo "::set-env name=baseRef::$PREV_TAG"
-
-      - name: Generate changelog
-        id: generate_changelog
-        uses: nblagoev/pull-release-notes-action@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          base-ref: ${{ env.baseRef }}
-          head-ref: ${{ github.ref }}
-
-      - name: Create release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          body: ${{steps.generate_changelog.outputs.result}}
-          draft: true
-          prerelease: false
           
       - name: Setup cache
         uses: actions/cache@v1
@@ -58,11 +29,16 @@ jobs:
         with:
           node-version: 10
       
-      - name: Install & build 
+      - name: Install
         run: |
           npm i -g yarn
           yarn install
-          yarn prod
+          
+      - name: Build
+        run: yarn prod
+          
+      - name: Zip files
+        run: |
           cd dist/test
           zip -r release.zip .
   
