--- a/.github/workflows/build-release-artifact.yml
+++ b/.github/workflows/build-release-artifact.yml
@@ -1,7 +1,6 @@
 on:
-  push:
-    tags:
-      - 'v*'
+  release:
+    types: [created]
 
 name: Build release artifact
 
@@ -11,6 +10,12 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
+      - name: Get release
+        id: release
+        uses: bruceadams/get-release@v1.2.1
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
           
       - name: Setup cache
         uses: actions/cache@v1
@@ -48,7 +53,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          upload_url: ${{ steps.release.outputs.upload_url }}
           asset_path: ./dist/test/release.zip
           asset_name: release.zip
           asset_content_type: application/zip
