--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "prod": "npm run ng -- build --prod",
-    "test": "ng test",
+    "test": "ng test --browsers ChromeHeadlessCI",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
