--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -34,5 +34,7 @@ jobs:
           npm i -g yarn
           yarn install
           
-      - name: Build
-        run: yarn test
+      - name: Test
+        uses: ianwalter/puppeteer@v2.0.0
+        with:
+          args: yarn test
