--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -34,7 +34,8 @@ jobs:
           npm i -g yarn
           yarn install
           
+      - name: Puppeteer
+        run: npm i -g puppeteer
+          
       - name: Test
-        uses: ianwalter/puppeteer@v2.0.0
-        with:
-          args: yarn test
+        run: yarn test
