--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -21,6 +21,10 @@ jobs:
           echo "Tag: ${{ steps.release.outputs.tag_name }}"
           echo "Release: ${{ steps.release.outputs.version }}"
           
+      - name: Was release generated?
+        uses: andymckay/cancel-action@0.2
+        if: ${{ steps.release.outputs.version }}
+          
       - name: Gets latest created release info
         id: latest-release
         uses: jossef/action-latest-release-info@v1.1.0
