--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,14 +16,14 @@ jobs:
         with:
           bump_version_scheme: patch
           
+      - name: Gets latest created release info
+        id: get-release
+        uses: jossef/action-latest-release-info@v1.1.0
+          
       - name: Check output parameters
         run: |
-          echo "Tag: ${{ steps.release.outputs.tag_name }}"
-          echo "Release: ${{ steps.release.outputs.version }}"
-          
-      - name: Gets latest created release info
-        id: latest-release
-        uses: jossef/action-latest-release-info@v1.1.0
+          echo format('Tag: release-on-push-action: {0} | action-latest-release-info: {1}', '${{ steps.release.outputs.tag_name }}', '${{ steps.get-release.outputs.tag_name }}')
+          echo format('Release: release-on-push-action: {0} | action-latest-release-info: {1}', '${{ steps.release.outputs.version }}', '${{ steps.get-release.outputs.name }}')
         
       - name: Checkout code
         uses: actions/checkout@v2
@@ -64,7 +64,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.latest-release.outputs.upload_url }}
+          upload_url: ${{ steps.get-release.outputs.upload_url }}
           asset_path: ./dist/test/release.zip
           asset_name: release.zip
           asset_content_type: application/zip
