--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,8 @@
 on:
   pull_request:
     branches: [release]
-    types: [opened, synchronize]
-    
+    types: [opened, synchronize, ready_for_review]
+
 name: Run tests
 
 jobs:
@@ -11,32 +11,32 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-          
+
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
         run: echo "::set-output name=dir::$(yarn cache dir)"
 
       - uses: actions/cache@v2
-        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+        id: yarn-cache
         with:
           path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
-            
-      - name: Setup NodeJS      
+
+      - name: Setup NodeJS
         uses: actions/setup-node@v1
         with:
           node-version: 10
-      
+
       - name: Install
         run: |
           npm i -g yarn
           yarn install
-          
+
       - name: Puppeteer
         run: yarn add -D puppeteer
-          
+
       - name: Test
         env:
           CI: true
