--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
           echo ${{ format('Tag: release-on-push-action: {0} | action-latest-release-info: {1}', steps.release.outputs.tag_name, steps.get-release.outputs.tag_name) }}
           echo ${{ format('Release: release-on-push-action: {0} | action-latest-release-info: {1}', steps.release.outputs.version, steps.get-release.outputs.name) }}
 
-      - name: Was release generated?
+      - name: Need to stop?
         uses: andymckay/cancel-action@0.2
         if: ${{ !steps.release.outputs.version }}
 
