--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    outputs:
+      release-info: ${{ steps.get-release.outputs }}
     steps:
       - id: release
         uses: rymndhng/release-on-push-action@master
@@ -53,22 +55,57 @@ jobs:
         run: |
           npm i -g yarn
           yarn install
-
+          
+  build-for-local-usage:
+    runs-on: ubuntu-latest
+    needs: [generate-release]
+    name: 'Build assets for local usage'
+    steps:
       - name: Build
-        run: yarn prod
+        run: |
+          echo "Setting environment to local..."
+          cp src/environments/environment.ts src/environments/environment.prod.ts
+          echo "Building..."
+          yarn prod --output-path=dist/local
+          echo "Restoring environment..."
+          git checkout src/environments/environment.prod.ts
 
       - name: Zip files
         run: |
-          cd dist/test
-          zip -r release.zip .
-
+          cd dist/local
+          zip -r ../release-local.zip .
+          
       - name: Upload release asset
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.get-release.outputs.upload_url }}
-          asset_path: ./dist/test/release.zip
-          asset_name: release.zip
+          upload_url: ${{ jobs.generate-release.outputs.release-info.upload_url }}
+          asset_path: ./dist/release-local.zip
+          asset_name: release-local.zip
+          asset_content_type: application/zip
+          
+  build-for-production-usage:
+    runs-on: ubuntu-latest
+    needs: [generate-release]
+    name: 'Build assets for production usage'
+    steps:
+      - name: Build
+        run: yarn prod
+
+      - name: Zip files
+        run: |
+          cd dist/test
+          zip -r ../release-prod.zip .
+          
+      - name: Upload release asset
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ jobs.generate-release.outputs.release-info.upload_url }}
+          asset_path: ./dist/release-prod.zip
+          asset_name: release-prod.zip
           asset_content_type: application/zip
