--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -81,7 +81,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ jobs.generate-release.outputs.release-info.upload_url }}
+          upload_url: ${{ needs.generate-release.outputs.release-info.upload_url }}
           asset_path: ./dist/release-local.zip
           asset_name: release-local.zip
           asset_content_type: application/zip
@@ -105,7 +105,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ jobs.generate-release.outputs.release-info.upload_url }}
+          upload_url: ${{ needs.generate-release.outputs.release-info.upload_url }}
           asset_path: ./dist/release-prod.zip
           asset_name: release-prod.zip
           asset_content_type: application/zip
