--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ jobs:
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     outputs:
-      release-info: ${{ steps.get-release.outputs }}
+      release-upload-url: ${{ steps.get-release.outputs.upload_url }}
     steps:
       - id: release
         uses: rymndhng/release-on-push-action@master
@@ -81,7 +81,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ needs.generate-release.outputs.release-info.upload_url }}
+          upload_url: ${{ needs.generate-release.outputs.release-upload-url }}
           asset_path: ./dist/release-local.zip
           asset_name: release-local.zip
           asset_content_type: application/zip
@@ -105,7 +105,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ needs.generate-release.outputs.release-info.upload_url }}
+          upload_url: ${{ needs.generate-release.outputs.release-upload-url }}
           asset_path: ./dist/release-prod.zip
           asset_name: release-prod.zip
           asset_content_type: application/zip
