--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,13 +6,14 @@ on:
 name: Generate release
 
 jobs:
-  run:
+  release:
     name: Generate release, build assets and upload them
     runs-on: ubuntu-latest
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     outputs:
       release-upload-url: ${{ steps.get-release.outputs.upload_url }}
+      new-version: ${{ steps.steps.release.outputs.version }}
     steps:
       - id: release
         uses: rymndhng/release-on-push-action@master
@@ -31,9 +32,23 @@ jobs:
       - name: Need to stop?
         uses: andymckay/cancel-action@0.2
         if: ${{ !steps.release.outputs.version }}
-
+        
+  build:
+    runs-on: ubuntu-latest
+    needs: [release]
+    name: Build and upload
+    steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        
+      - name: Bump version
+        run: npm version ${{ needs.release.outputs.new-version }} --no-git-tag-version
+      
+      - name: Git commit on workflow
+        uses: matheusalbino/git-commit@v1.0.1
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          message: ${{ needs.release.output.new-version }}
 
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
@@ -76,7 +91,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.get-release.outputs.upload_url }}
+#           upload_url: ${{ steps.get-release.outputs.upload_url }}
+          upload_url: ${{ needs.release.outputs.release-upload-url }}
           asset_path: ./dist/release-local.zip
           asset_name: release-local.zip
           asset_content_type: application/zip
@@ -94,7 +110,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.get-release.outputs.upload_url }}
+          upload_url: ${{ needs.release.outputs.release-upload-url }}
           asset_path: ./dist/release-prod.zip
           asset_name: release-prod.zip
           asset_content_type: application/zip
