--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     outputs:
       release-upload-url: ${{ steps.get-release.outputs.upload_url }}
-      new-version: ${{ steps.steps.release.outputs.version }}
+      new_version: ${{ steps.release.outputs.version }}
     steps:
       - id: release
         uses: rymndhng/release-on-push-action@master
@@ -42,13 +42,13 @@ jobs:
         uses: actions/checkout@v2
         
       - name: Bump version
-        run: npm version ${{ needs.release.outputs.new-version }} --no-git-tag-version
+        run: npm version ${{ needs.release.outputs.new_version }} --no-git-tag-version
       
       - name: Git commit on workflow
         uses: matheusalbino/git-commit@v1.0.1
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          message: ${{ needs.release.output.new-version }}
+          message: ${{ needs.release.outputs.new_version }}
 
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
