--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,7 @@ name: Generate release
 
 jobs:
   release:
-    name: Generate release, build assets and upload them
+    name: Generate release
     runs-on: ubuntu-latest
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -36,19 +36,21 @@ jobs:
   build:
     runs-on: ubuntu-latest
     needs: [release]
-    name: Build and upload
+    name: Build assets and upload
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
         
-      - name: Bump version
-        run: npm version ${{ needs.release.outputs.new_version }} --no-git-tag-version
-      
-      - name: Git commit on workflow
-        uses: matheusalbino/git-commit@v1.0.1
+      - name: Setup GIT token
+        uses: fregante/setup-git-token@v1
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          message: ${{ needs.release.outputs.new_version }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+        
+      - name: Bump version
+        run: |
+          npm version ${{ needs.release.outputs.new_version }} --no-git-tag-version
+          git add package.json
+          git commit -m "${{ needs.release.outputs.new_version }}"
 
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
