--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,6 +51,7 @@ jobs:
           npm version ${{ needs.release.outputs.new_version }} --no-git-tag-version
           git add package.json
           git commit -m "${{ needs.release.outputs.new_version }}"
+          git push --follow-tags
 
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
