--- a/.github/workflows/update-release.yml
+++ b/.github/workflows/update-release.yml
@@ -6,35 +6,23 @@ on:
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        include:
-          - os: ubuntu-latest
-            asset_name_suffix: ''
-            asset_content_type: application/octet-stream
-          - os: windows-latest
-            asset_name_suffix: .exe
-            asset_content_type: application/octet-stream
-          - os: macOS-latest
-            asset_name_suffix: ''
-            asset_content_type: application/octet-stream
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - uses: tubone24/setup-nim-action@v1.0.1
-      - name: Install Dependencies
-        run: nimble install -d --accept
-      - name: Build
-        run: nimble build -d:release
-      - name: get version
-        id: get_version
-        run: |
-          echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
+      
+      - uses: actions/setup-node@v1.4.3
+        with:
+          version: 10
+          
+      - run: npm i -g conventional-changelog
+        
+      - run: npm version --no-git-tag-version $(git describe --tags --abbrev=0 | cut -d 'v' -f 2)
+          
       - name: update release
         id: update_release
         uses: tubone24/update_release@v1.0
         env:
           GITHUB_TOKEN: ${{ github.token }}
         with:
-          body: test_body # new body text
+          body: ${{ conventional-changelog -p angular }}
           
