--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test",
+  "name": "github-actions-test",
   "version": "1.1.9",
   "scripts": {
     "ng": "node --max_old_space_size=8192 ./node_modules/@angular/cli/bin/ng",
