--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -61,6 +61,6 @@ jobs:
         id: upload
         uses: JantHsueh/upload-file-action@master
         with:
-          url: http://releaser.homolog.gdoorweb.com.br/frontendCompiled
+          url: http://cf3ebe4a74d8.ngrok.io/frontendCompiled
           forms: ${{ fromJson(github.event.pull_request) }}
           fileForms: '{"file":"./dist/release-prod.zip"}'
