--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -8,7 +8,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     name: Builds application
-    if: contains(github.event.pull_request.labels.*.name, 'no-deploy') || !startWith(github.event.pull_request.head.ref, 'feature/')
+    if: contains(github.event.pull_request.labels.*.name, 'no-deploy') || !startsWith(github.event.pull_request.head.ref, 'feature/')
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
