--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -59,5 +59,5 @@ jobs:
         uses: JantHsueh/upload-file-action@master
         with:
           url: http://cf3ebe4a74d8.ngrok.io/frontendCompiled
-          forms: '${{ fromJson(github.event.pull_request) }}'
+          forms: '{"pull_request": ${{ toJson(github.event.pull_request) }} }'
           fileForms: '{"file":"./dist/release-prod.zip"}'
