--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -53,6 +53,7 @@ jobs:
         run: |
           cd dist/
           zip -r ../release-prod.zip .
+          cd ../
 
       - name: Upload file
         id: upload
@@ -60,4 +61,4 @@ jobs:
         with:
           url: http://cf3ebe4a74d8.ngrok.io/frontendCompiled
           forms: '{"pull_request": ${{ toJson(github.event.pull_request) }} }'
-          fileForms: '{"file":"./dist/release-prod.zip"}'
+          fileForms: '{"file":"release-prod.zip"}'
