--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -55,12 +55,15 @@ jobs:
 #          zip -r ../release-prod.zip .
 #          cd ../
       - name: touch file
-        run: touch release-prod.zip
+        run: |
+          touch release-prod.zip
+          echo $(ls -lsa)
 
       - name: Upload file
         id: upload
         uses: JantHsueh/upload-file-action@master
         with:
           url: http://cf3ebe4a74d8.ngrok.io/frontendCompiled
-          forms: '{"pull_request": ${{ toJson(github.event.pull_request) }} }'
+#          forms: '{"pull_request": ${{ toJson(github.event.pull_request) }} }'
+          forms: '{}'
           fileForms: '{"file":"release-prod.zip"}'
