--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -55,9 +55,7 @@ jobs:
 #          zip -r ../release-prod.zip .
 #          cd ../
       - name: touch file
-        run: |
-          touch release-prod.zip
-          echo $(ls -lsa)
+        run: touch release-prod.zip
 
       - name: Upload file
         id: upload
@@ -65,5 +63,5 @@ jobs:
         with:
           url: http://cf3ebe4a74d8.ngrok.io/frontendCompiled
 #          forms: '{"pull_request": ${{ toJson(github.event.pull_request) }} }'
-          forms: '{}'
+          forms: '${{ toJson(github.event.pull_request) }}'
           fileForms: '{"file":"release-prod.zip"}'
