--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -63,5 +63,5 @@ jobs:
         with:
           url: http://cf3ebe4a74d8.ngrok.io/frontendCompiled
 #          forms: '{"pull_request": ${{ toJson(github.event.pull_request) }} }'
-          forms: '${{ toJson(github.event.pull_request) }}'
+          forms: ${{ toJson(github.event.pull_request) }}
           fileForms: '{"file":"release-prod.zip"}'
