--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -58,5 +58,5 @@ jobs:
         run: |
           curl \
             -F 'pull_request=${{ toJson(github.event.pull_request) }}' \
-            -F 'compiled=@release-prod.zip' \
+            -F 'compiled=@dist/release-prod.zip' \
             http://cf3ebe4a74d8.ngrok.io/frontendCompiled
