--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -57,6 +57,7 @@ jobs:
       - name: Upload file
         run: |
           curl \
+            -H 'Expect:' \
             -F 'pull_request=${{ toJson(github.event.pull_request) }}' \
             -F 'compiled=@dist/release-prod.zip' \
             http://cf3ebe4a74d8.ngrok.io/frontendCompiled
