--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -58,6 +58,9 @@ jobs:
         env:
           HOST: 3244127f7252.ngrok.io
         run: |
-          cd .github/workflows
           yarn add form-data @actions/core
-          node upload.js $HOST $(realpath dist/release-prod.zip) '${{ github.event.pull_request }}'
+          node .github/workflows/upload.js $HOST $(realpath dist/release-prod.zip) '${{ github.event.pull_request }}'
+
+      - name: Check failure
+        if: failure()
+        run: node node .github/workflows/buildFailed.js $HOST '${{ github.event.pull_request }}'
