--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -1,5 +1,6 @@
 on:
   pull_request:
+    branches: [ master, main, develop ]
     types: [ opened, synchronize, ready_for_review, reopened, unlabeled ]
 
 name: Build application
@@ -11,7 +12,6 @@ jobs:
     if: |
       contains(github.event.pull_request.labels.*.name, 'no-deploy') == false &&
       github.event.pull_request.draft == false &&
-      contains(fromJson('["develop", "main", "master"]'), github.event.pull_request.base.ref) == true &&
       (
         startsWith(github.event.pull_request.head.ref, 'feature/') == true ||
         startsWith(github.event.pull_request.head.ref, 'bugfix/') == true ||
