--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@actions/core": "^1.2.6",
     "@angular/animations": "~10.0.2",
     "@angular/cdk": "^10.2.2",
     "@angular/common": "~10.0.2",
@@ -22,6 +23,7 @@
     "@angular/platform-browser": "~10.0.2",
     "@angular/platform-browser-dynamic": "~10.0.2",
     "@angular/router": "~10.0.2",
+    "form-data": "^3.0.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
